# vcglib

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/tridecimator/: CMakeLists.txt  main.cpp  tridecimator.cpp  tridecimator.h  tridecimatorpy.cpp
python/: CMakeLists.txt
python/vcg/: __init__.py
python/vcg/apps/: __init__.py
python/vcg/apps/tridecimator/: __init__.py  test.py
